# nl-web-service

./: .dockerignore  .env.example  Caddyfile  Cargo.toml  Dockerfile  README.md  compose.yml
.github/workflows/: ci.yml  deploy-release.yml
migrations/: 0001_workflows.sql  0002_game_workflows.sql  0003_archive_catalog.sql
scripts/: deploy_new.sh  dev.sh  recreate_caddy.sh  update.sh  view_logs.sh
src/: app.rs  archive.rs  config.rs  db.rs  error.rs  main.rs  model.rs  roblox.rs  transform.rs
windows/: README.md
workflows/: deploy-release.yml
