[package]
name = "native-web-service"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1"
axum = "0.8"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
futures-util = "0.3"
rand = "0.9"
rbx_binary = "2"
rbx_dom_weak = "4"
rbx_types = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
subtle = "2"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net", "sync", "time"] }
tower-http = { version = "0.6", features = ["request-id", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
